--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 title: Archive
 layout: default
 description: "「游戏玩家」"
-header-img: "img/bg-little-universe.jpg"
+header-img: "img/bg-nju.jpg"
 ---
 
 <!--
