--- a/about.html
+++ b/about.html
@@ -1,11 +1,21 @@
 ---
 layout: page
 title: "About"
-description: "「乏善可陈」"
+description: "「乏善可陈。」"
 header-img: "img/bg-venla.jpg"
 header-mask: 0.3
 multilingual: true
 ---
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-51MEXKXTG0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-51MEXKXTG0');
+</script>
 
 {% include multilingual-sel.html %}
 
