--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,19 @@
 ---
 title: Archive
 layout: default
-description: "「游戏玩家」"
+description: "「游戏玩家。」"
 header-img: "img/bg-nju.jpg"
 ---
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-51MEXKXTG0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-51MEXKXTG0');
+</script>
 
 <!--
 Credits: this page shamelessly borrowed a lot from:
